--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <!-- partial:index.partial.html -->
 <div class="graph">
   <div class="bar category1">
-    <h3>Category 1</h3>
+    <h3>Total Pips Caught 2020</h3>
 		<div class="rectangle"></div>
 		<span class="counter">84,898</span>
   </div>
   <div class="bar category2">
-    <h3>Category 2</h3>
+    <h3>Total Pips Caught 2020</h3>
 		<div class="rectangle"></div>
 		<span class="counter">68,629</span>
 	</div>
